--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youtube Trending Videos</title>
+    <title>Youtube-Sam Meshach </title>
     <link rel="stylesheet" href="Youtube.css" />
+    <link rel="icon" href="logoAndImages\h1.png"/> 
   </head>
   <body>
     <!-- <-------- starting of navbar ------------>
@@ -46,7 +47,7 @@
 
         <div class="user-dp">
           <img
-            src=""
+            src="logoAndImages\h1.png"
             alt="user"
           />
         </div>
